# gtest-cmake

./: .gitignore  CMakeLists.txt
test/: Test.cpp
